objects/Lighthouse_Worksheets__c.object
<CustomObject>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Lighthouse Worksheets</relationshipLabel>
        <relationshipName>Lighthouse_Worksheets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cell_phone_for_notifications__c</fullName>
        <label>Cell phone for notifications</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Change_Coming_Due_Days_Email__c</fullName>
        <label>Follow up Notice #1 - Email</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6 (Default - No changes needed)</fullName>
                    <default>true</default>
                    <label>6 (Default - No changes needed)</label>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Change_Coming_Due_Days_Postcard__c</fullName>
        <label>Follow up Notice #1 - Postcard</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4 (Default - No Changes Needed)</fullName>
                    <default>true</default>
                    <label>4 (Default - No Changes Needed)</label>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>No Coming Due Postcards</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Change_Coming_Due_Days_Text__c</fullName>
        <label>Follow up Notice #1 - Text</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5 (Default - No changes needed)</fullName>
                    <default>true</default>
                    <label>5 (Default - No changes needed)</label>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Change_Coming_Due_Months_Email__c</fullName>
        <label>Change Time Based Email (Months)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default - No Changes Needed</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Change_Coming_Due_Weeks_Email__c</fullName>
        <label>Change Coming Due Weeks - Email</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4 (Default - No Changes Needed)</fullName>
                    <default>true</default>
                    <label>4 (Default - No Changes Needed)</label>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Change_Coming_Due_Weeks_Postcard__c</fullName>
        <label>Change Coming Due Weeks - Postcard</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2 (Default - No Changes Needed)</fullName>
                    <default>true</default>
                    <label>2 (Default - No Changes Needed)</label>
                </value>
                <value>
                    <fullName>No Coming Due Postcards</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Change_Coming_Due_Weeks_Text__c</fullName>
        <label>Change Coming Due Weeks - Text</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3 (Default - No Changes Needed)</fullName>
                    <default>true</default>
                    <label>3 (Default - No Changes Needed)</label>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Change_Coming_Due_Weeks__c</fullName>
        <label>Change Coming Due Weeks</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_LTR_Weeks_to__c</fullName>
        <label>Change LTR Weeks to:</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Mileage_Based_Email_Months__c</fullName>
        <label>Change Mileage Based Email (Months)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default - No Changes Needed</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Change_account_name_to_Camel_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Change account name to Camel Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Change_email_to_lower_case__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Change email to lower case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Change_phone_number_to_xxx_xxx__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Change phone number to xxx-xxx</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Change_the_account_name_to_G4_account_na__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Change account name to G4_account name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Change_user_SN_to_be_with_G5_as_user__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Change user SN to be with G5 as user</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Check_for_Recall_Issues__c</fullName>
        <inlineHelpText>Check the appt book and recall stats in the old portal</inlineHelpText>
        <label>Check for Recall Issues</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Issues Found</fullName>
                </value>
                <value>
                    <fullName>Recall OK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Check_for_Spanish_Templates_Medical_Ale__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check for Spanish Templates (Alerts)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Check_for_custom_conditions__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>if Condition exists that looks at Chair ID or Producer ID, please verify these have not changed in new PMS
if exist then re-assign to new 360 acct</inlineHelpText>
        <label>Check for custom conditions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Check_for_custom_template_fragments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check for custom template fragments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Check_the_column_numbers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check the column numbers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City_and_State__c</fullName>
        <label>City and State</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Email__c</fullName>
        <formula>Practice_Name__r.Client_E_mail__c</formula>
        <label>Client Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Email_from_Acct__c</fullName>
        <label>Client Email from Acct</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Client_Information_Updates__c</fullName>
        <label>Client Information Updates</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Client_Phone_Number__c</fullName>
        <formula>Practice_Name__r.Client_Phone_Number__c</formula>
        <label>Client Phone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Notes__c</fullName>
        <label>Close Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Closed_Date__c</fullName>
        <formula>Date_Time_Closed__c</formula>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Closed_Month__c</fullName>
        <formula>CASE( 
MONTH(   Closed_Date__c   ), 
1, "01 - January", 
2, "02 - February", 
3, "03 - March", 
4, "04 - April", 
5, "05 - May", 
6, "06 - June", 
7, "07 - July", 
8, "08 - August", 
9, "09 - September", 
10, "10 - October", 
11, "11 - November", 
"12 - December" 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closed Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Club_ID__c</fullName>
        <label>Club ID</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Communication_Notes__c</fullName>
        <label>Communication Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Completing_Appointments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completing Appointments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Computer_Name__c</fullName>
        <label>Computer Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Config_Difficulty__c</fullName>
        <label>Config Difficulty</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Basic</fullName>
                </value>
                <value>
                    <fullName>Plus Rule</fullName>
                </value>
                <value>
                    <fullName>Special Message Fragments</fullName>
                </value>
                <value>
                    <fullName>Fake Chair/Column/Provider</fullName>
                </value>
                <value>
                    <fullName>Messages by Provider/Chair</fullName>
                </value>
                <value>
                    <fullName>Multi-location Split</fullName>
                </value>
                <value>
                    <fullName>Spanish Templates</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Config_Prep__c</fullName>
        <label>Config Prep</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Verify Newsletter Date</fullName>
                </value>
                <value>
                    <fullName>Portal Addresses Present</fullName>
                </value>
                <value>
                    <fullName>Verify STC Days</fullName>
                </value>
                <value>
                    <fullName>Verify Pre-Processors Present</fullName>
                </value>
                <value>
                    <fullName>Update feedback CTA Fragment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Config_Value__c</fullName>
        <formula>IF(INCLUDES( Config_Difficulty__c ,"Plus Rule"),1,0)

+

IF(INCLUDES( Config_Difficulty__c ,"Special Message Fragments"),2,0)

+

IF(INCLUDES( Config_Difficulty__c ,"Fake Chair/Column/Provider"),2,0)

+

IF(INCLUDES( Config_Difficulty__c ,"Messages by Provider/Chair"),3,0)

+


IF(INCLUDES( Config_Difficulty__c ,"Multi-location Split"),6,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Config Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Config_bat_Change_Password__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Config.bat: Change Password</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Config_bat_Change_Username__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Config.bat: Change Username</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Config_bat_Select_the_PMS_datapath__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>( ie. /Dentrix/db/dentrixsql.dbs) as applicable</inlineHelpText>
        <label>Config.bat: Select the PMS datapath:</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Confirm_When_Msg_Left__c</fullName>
        <inlineHelpText>Does the office want us to confirm the appt when we leave a message?</inlineHelpText>
        <label>Confirm When Msg Left</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>AutoCalls__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Confirm_at_Long_Term_Reminder_Messages__c</fullName>
        <inlineHelpText>Does the office want the confirmation option on the 2 week reminder email/text?</inlineHelpText>
        <label>Confirm at Long Term Reminder Messages</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Emails__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No (Default)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Connect_Key__c</fullName>
        <label>Connect Key</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumables_Notes__c</fullName>
        <label>Consumables Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contacts_Since_Last_Sync__c</fullName>
        <label># Contacts Since Last Sync</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contacts_Today__c</fullName>
        <label># Contacts Today</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Copied_Template_Account_From__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Copied Template Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Copy_Campaigns__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Copy Campaigns</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Copy_Recall_Descriptions_from_Remote_GUI__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>if applicable</inlineHelpText>
        <label>Copy Recall Descriptions from Remote GUI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Copy_Templates__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Copy Templates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Copy_campaigns_from_OLD_360_ACCT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Copy campaigns from OLD 360 ACCT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Copy_lhwinservice_properties__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If you still have access to old server lhds folder</inlineHelpText>
        <label>Copy lhwinservice.properties</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Copy_templates_from_OLD_360_ACCT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Copy templates from OLD 360 ACCT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cost_Verification_Email_Address__c</fullName>
        <label>CSC Recap Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Create_RFC_if_NOT_Scheduled_Assign_BK__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Change CW Status to RFC if NOT Scheduled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_Bomgar_Shortcut__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created Bomgar Shortcut</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_SF_Case_for_Delayed_Turn_On__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created SF Case for Delayed Turn On</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Active_Features__c</fullName>
        <label>Current Active Features</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EM</fullName>
                </value>
                <value>
                    <fullName>TXT</fullName>
                </value>
                <value>
                    <fullName>OBC</fullName>
                </value>
                <value>
                    <fullName>PC</fullName>
                </value>
                <value>
                    <fullName>Letters</fullName>
                </value>
                <value>
                    <fullName>NL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Curve_Install_Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Curve Install Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DT_Closed_OB__c</fullName>
        <label>Date/Time Closed (OOS Backfill)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DT_Closed_Sys__c</fullName>
        <label>Date/Time Closed System</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DT_Opened_OB__c</fullName>
        <label>Date/Time Opened (OOS Backfill)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Data_Path__c</fullName>
        <label>Data Path</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Date_Time_Case_IMS_Rep_Assigned__c</fullName>
        <description>The Date/ Time the Case IMS Rep was assigned by the automated Process (Case - Assign IMS Rep on Consumable Adjustment)</description>
        <label>Date/Time Case IMS Rep Assigned</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Closed__c</fullName>
        <formula>IF( 
ISBLANK(  DT_Closed_OB__c  ),  DT_Closed_Sys__c  ,DT_Closed_OB__c)</formula>
        <label>Date/Time Closed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Install_Scheduled__c</fullName>
        <label>Date/Time Install Scheduled</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Logo_Complete__c</fullName>
        <label>Date/Time Logo Complete</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Logo_Ready__c</fullName>
        <label>Date/Time Logo Ready</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Opened__c</fullName>
        <formula>IF( 
ISBLANK(  DT_Opened_OB__c  ), CreatedDate ,DT_Opened_OB__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date/Time Opened</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Post_Install_In_Progress__c</fullName>
        <label>Date/Time Post Install In Progress</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_to_Turn_On_OBC__c</fullName>
        <label>Date to Turn On OBC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_to_Turn_On_Postcards__c</fullName>
        <label>Date to Turn On Postcards</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_to_Turn_On_Recall__c</fullName>
        <label>Date to Turn On Recall</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Btwn_Sale_Initial_Install__c</fullName>
        <formula>DATEVALUE(Initial_Scheduled_Install_Date__c) -  DATEVALUE(CreatedDate )</formula>
        <label>Days Btwn Sale &amp; Initial Install Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Btwn_Sale_Install__c</fullName>
        <formula>Install_Date__c -  DATEVALUE(CreatedDate)</formula>
        <label>Days Btwn Sale &amp; Install</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deactivate_Entire_Reactivation_Campaign__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deactivate Entire Reactivation Campaign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Defer_IEE_Alert_for_2_wks__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Defer IEE Alert for 2 wks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Defer_Until__c</fullName>
        <label>Defer Until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Demandforce_Review_Migration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Demandforce Review Migration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dentrix_Account_Number__c</fullName>
        <label>Dentrix Account Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dentrix_Cell__c</fullName>
        <label>Dentrix Cell</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>PMS__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Cell</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Mobile &amp; Other</fullName>
                </value>
                <value>
                    <fullName>*Special</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dentrix_Details__c</fullName>
        <label>Dentrix Details</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>PMS__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Verify Appt Confirmation Status</fullName>
                </value>
                <value>
                    <fullName>Verify Recall Descriptions</fullName>
                </value>
                <value>
                    <fullName>Discuss New Patients</fullName>
                </value>
                <value>
                    <fullName>Verify Appt Complete Status</fullName>
                </value>
                <value>
                    <fullName>Discuss Continuing Care</fullName>
                </value>
                <value>
                    <fullName>Verify PreMed Alerts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Disable_Old_360_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Old 360 Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_Recall_Postcards_for_Patients__c</fullName>
        <label>Recall Postcard Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default Setup (Send to All)</fullName>
                </value>
                <value>
                    <fullName>Default Setup (Disable for Customers with email)</fullName>
                </value>
                <value>
                    <fullName>Disable for Patients with Both</fullName>
                </value>
                <value>
                    <fullName>Disable for Patients with Email</fullName>
                </value>
                <value>
                    <fullName>Disable for Patients with Cell</fullName>
                </value>
                <value>
                    <fullName>Disable ALL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>